--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,7 @@ h1 {
     overflow: hidden;
     text-decoration: none;
     text-align: center;
-    position: fixed;
+    /* position: fixed; */
 
 }
 
@@ -47,10 +47,15 @@ h1 {
 
 .header-right {
     float: right;
-    margin-right: 200px;
+    margin-right: 50px; 
     height: 66px;
-    background-color: #4aaaa5;
-    padding: 20px 4px 0px 4px;
+    width: 260px;
+    
+    text-align: center;
+    padding-top: 20px;
+    /* display: block; */
+
+
 }
 
 .header-right a {
@@ -58,7 +63,9 @@ h1 {
     text-decoration: none;
     color: #cccccc;
     font-family: font-family: 'Georgia', Times, Times New Roman, serif;
+    border-right: 10px;
     /* padding: 20px 4px 0px 4px; */
+    
 
 
 }
@@ -66,8 +73,34 @@ h1 {
 .header a:hover {
     background-color: #ddd;
     color: black;
+
   }
 
+.col-1 a {
+    border-right: 1pt solid;
+    height: 16px;
+    float: left;
+    width: 30%;
+    padding: 5.5px 1px 5.5px 1px;
+
+}
+
+.col-2 a {
+    border-right: 1pt solid;
+    height: 16px;
+    float: left;
+    width: 30%;
+    padding: 5.5px 1px 5.5px 1px;
+
+}
+
+.col-3 a {
+    height: 16px;
+    float: left;
+    width: 30%;
+    padding: 5.5px 1px 5.5px 1px;
+
+}
 
 /* .sticky {
     position: fixed;
