--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,17 +8,11 @@ body {
 
 h1 {
     font-size: 18pt;
+
 }
 
-/* a {
-    text-decoration: none;
-    margin-left: 10px;
-    margin-right: 10px;
-    float: right;
-} */
 
 .header {
-    font-family: 'Georgia', Times, Times New Roman, serif;
     background-color: #ffffff;
     border-bottom: 1px solid #cccccc;
     height: 66px;
@@ -26,7 +20,7 @@ h1 {
     overflow: hidden;
     text-decoration: none;
     text-align: center;
-    /* position: fixed; */
+    
 
 }
 
@@ -41,19 +35,20 @@ h1 {
     height: 66px;
     padding: 20px 6px 0px 6px;
     background-color: #4aaaa5;
-    font-family: font-family: 'Georgia', Times, Times New Roman, serif;
+    font-family: 'Georgia', Times, Times New Roman, serif;
+    color: white;
 }
 
 
 .header-right {
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     float: right;
-    margin-right: 50px; 
+    margin-right: 200px; 
     height: 66px;
     width: 260px;
-    
     text-align: center;
     padding-top: 20px;
-    /* display: block; */
+
 
 
 }
@@ -62,10 +57,7 @@ h1 {
     height: 66px;
     text-decoration: none;
     color: #cccccc;
-    font-family: font-family: 'Georgia', Times, Times New Roman, serif;
     border-right: 10px;
-    /* padding: 20px 4px 0px 4px; */
-    
 
 
 }
