--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,13 +11,26 @@ h1 {
 
 }
 
+h2 {
+    font-size: 18pt;
+
+}
+
+#full-width {
+    background-color: #ffffff;
+    width: 100%;
+    border-bottom: 1px solid #cccccc;
+    height: 66px;
+
+
+}
 
 .header {
     background-color: #ffffff;
     border-bottom: 1px solid #cccccc;
     height: 66px;
-    width: 100%;
-    overflow: hidden;
+    width: 960px;
+    /* overflow: hidden; */
     text-decoration: none;
     text-align: center;
     
@@ -27,8 +40,9 @@ h1 {
 
 .header-left {
     float: left;
-    margin-left: 200px;
+    margin-left: 140px;
     height: 66px;
+    overflow: hidden;
 }
 
 .header-left h1 {
@@ -42,8 +56,8 @@ h1 {
 
 .header-right {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    float: right;
-    margin-right: 200px; 
+    float: none;
+    margin-left: 859px;
     height: 66px;
     width: 260px;
     text-align: center;
@@ -91,6 +105,21 @@ h1 {
     float: left;
     width: 30%;
     padding: 5.5px 1px 5.5px 1px;
+
+}
+
+.content {
+    margin: 20px 140px 20px 140px;
+    height: 760px;
+    width: 960px;
+
+
+    background-color: #ffffff;
+}
+
+.content-head {
+    padding: 20px 0px 20px 6px;
+    color: #4aaaa5;
 
 }
 
