--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,7 @@ h2 {
 
 }
 
+
 #full-width {
     background-color: #ffffff;
     width: 100%;
@@ -155,7 +156,6 @@ p {
     border-top: 8px solid #4aaaa5;
     
     
-    
 
 }
 
@@ -263,14 +263,14 @@ img[alt*="search_img"] {
 form {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 
-
 }
 
 input[type=text] {
     margin-top: 10px;
     width: 99%;
     font-size: 12pt;
-    
+    border: 1.1px solid #cccccc;
+    color: #bbbbbb;
 
 }
 
@@ -282,10 +282,19 @@ h3 {
 
 .content-contact {
     margin: 30px 140px 20px 140px;
-    height: 560px;
+    height: 460px;
     width: 960px;
     background-color: #ffffff;
     overflow: none;
 
+
+}
+
+
+#border_1 {
+    width: 99%;
+    border: 1.1px solid #cccccc;
+    font-size: 12pt;
+    color: #bbbbbb;
 
 }
