--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,6 +34,7 @@ h2 {
     text-decoration: none;
     text-align: center;
     
+    
 }
 
 .header-left {
@@ -41,6 +42,7 @@ h2 {
     margin-left: 140px;
     height: 66px;
     overflow: hidden;
+    box-shadow: 0px 0px 12px .3px #d4d4d4
 }
 
 .header-left h1 {
@@ -60,6 +62,7 @@ h2 {
     width: 260px;
     text-align: center;
     padding-top: 20px;
+    font-weight: 540;
 
 
 }
@@ -111,6 +114,7 @@ h2 {
     width: 960px;
     background-color: #ffffff;
     overflow: none;
+    box-shadow: 0px 0px 12px .3px #d4d4d4;
     
 }
 
@@ -154,8 +158,20 @@ p {
     text-decoration: none;
     text-align: center;
     border-top: 8px solid #4aaaa5;
-    
-    
+
+
+}
+
+.footer-contact {
+    background-color: #666666;
+    height: 66px;
+    width: 100%;
+    text-decoration: none;
+    text-align: center;
+    border-top: 8px solid #4aaaa5;
+    position: fixed;
+    left: 0;
+    bottom: 0;
 
 }
 
@@ -277,7 +293,8 @@ input[type=text] {
 h3 {
     font-size: 16pt;
     color: #bbbbbb;
-    padding-top: 10px;
+    padding-top: 6px;
+    font-weight: 500;
 }
 
 .content-contact {
@@ -297,4 +314,10 @@ h3 {
     font-size: 12pt;
     color: #bbbbbb;
 
+}
+
+#my-button {
+    height: 30px;
+    width: 100px;
+    box-shadow: .5px .5px .5px .5px #666666;
 }
