--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,7 +42,7 @@ h2 {
     margin-left: 140px;
     height: 66px;
     overflow: hidden;
-    box-shadow: 0px 0px 12px .3px #d4d4d4
+    box-shadow: 0px 0px 12px .3px #d4d4d4;
 }
 
 .header-left h1 {
@@ -303,6 +303,7 @@ h3 {
     width: 960px;
     background-color: #ffffff;
     overflow: none;
+    box-shadow: 0px 0px 12px .3px #d4d4d4;
 
 
 }
